Modifications of the log out button

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   flutter_localization: ^0.2.2
   provider: ^6.1.2
   carousel_slider: ^5.0.0
-  curved_navigation_bar: ^1.0.6
+  intl:
 
 dev_dependencies:
   flutter_test:
