--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -42,15 +44,16 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^12.3.1
   firebase_app_check: ^0.3.1+2
-  flutter_localization: ^0.2.2
   provider: ^6.1.2
   carousel_slider: ^5.0.0
-  intl:
+  intl: ^0.19.0
+  intl_utils: ^2.8.7
+  flutter_localization: ^0.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^2.4.6
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -63,12 +66,13 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+ 
+ 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  generate: true
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
